# python-cli-typer-framework

./: README.md  cookiecutter.json
{{ cookiecutter.project_slug }}/: Makefile  README.md  pyproject.toml
{{ cookiecutter.project_slug }}/tests/: conftest.py
{{ cookiecutter.project_slug }}/{{ cookiecutter.pkg_name }}/: __init__.py  __main__.py  cli.py
{{ cookiecutter.project_slug }}/{{ cookiecutter.pkg_name }}/commands/: quote.py  text.py
